infra/k8s/leagues-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leagues-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leagues
  template:
    metadata:
      labels:
        app: leagues
    spec:
      containers:
        - name: leagues
          image: jzenon/leagues
          resources:
            requests:
              memory: "300Mi"
              cpu: "500m"
            limits:
              memory: "600Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: leagues-srv
spec:
  selector:
    app: leagues
  ports:
    - name: leagues
      protocol: TCP
      port: 3001
      targetPort: 3000
