infra/k8s/players-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: players
  template:
    metadata:
      labels:
        app: players
    spec:
      containers:
        - name: players
          image: jzenon/players
          resources:
            requests:
              memory: "300Mi"
              cpu: "500m"
            limits:
              memory: "600Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: players-srv
spec:
  selector:
    app: players
  ports:
    - name: players
      protocol: TCP
      port: 3002
      targetPort: 3000
