infra/k8s/teams-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teams-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teams
  template:
    metadata:
      labels:
        app: teams
    spec:
      containers:
        - name: teams
          image: jzenon/teams
          resources:
            requests:
              memory: "300Mi"
              cpu: "500m"
            limits:
              memory: "600Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: teams-srv
spec:
  selector:
    app: teams
  ports:
    - name: teams
      protocol: TCP
      port: 3003
      targetPort: 3000
